--- a/template/tiendaApp/productos.html
+++ b/template/tiendaApp/productos.html
@@ -29,6 +29,7 @@
                 <th>Descripción</th>
                 <th>Cantidad</th>
                 <th>Categoria</th>
+                <th>Precio</th>
                 <th>Acción</th>
                 
             </tr>
@@ -42,6 +43,8 @@
                 <td>{{Produc.Descripcion}}</td>
                 <td>{{Produc.Cantidad}}</td>
                 <td>{{Produc.Categoria}}</td>
+                <td>{{Produc.Precio}}</td>
+                
                 <td><a href="/actualizar/{{Produc.id}}" class="btn btn-success btn-sm"><i class="bi bi-pencil"></i></td>
                 <td><a href="/eliminar/{{Produc.id}}" class="btn btn-danger btn-sm"><i class="bi bi-trash"></i></td>
 
@@ -53,6 +56,7 @@
     {% else %}
     <div class="alert alert-info">no hay productos</div>
     {% endif %}
+<a href="../index/" class="btn btn-danger btn-sm">volver</a>
 
 </body>
 </html>
